# mail_service_fastapi

./: .envexample  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose-test.yaml  pyproject.toml
src/adapters/logger/: config.py  main.py
src/adapters/mail/: config.py  gateway.py  main.py
src/business_logic/mail/: enum.py  utils.py
src/business_logic/mail/dto/: __init__.py  mail.py
src/business_logic/mail/exceptions/: __init__.py  mail.py
src/business_logic/mail/interfaces/: mail.py
src/business_logic/mail/services/: send_mail.py
src/presentation/api/: lifespan.py  main.py
src/presentation/api/controllers/: exceptions.py  mail.py  main.py
src/presentation/api/di/: main.py  stub.py
src/presentation/api/di/providers/mail/: gateway.py  mail.py
src/presentation/api/di/providers/services/: mail.py
src/presentation/api/middlewares/: logger.py  main.py
src/presentation/api/settings/: config.py  extractor.py
tests/: conftest.py  mocks.py
tests/integration/api/: test_api_send_mail.py
tests/unit/business_logic/mail/: test_send_mail_service.py  test_validate_email.py
tests/unit/presentation/: test_config_extractor.py
